--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <a href="https://www.youtube.com/@mianri"><img src="yt.gif">  
 <a href="https://letterboxd.com/cheri4er/"><img src="letterboxd.gif">
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ao7ghqQtY0g?si=KkzrKYnREAM6iF_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>    
+<a href="https://www.last.fm/user/genesis024"><img src="https://lastfm-recently-played.vercel.app/api?user=genesis024" height="auto" width="350px"/></a>
+</body>
 </html>
